--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,13 @@
-site_name: My Docs
+site_name: Aria2c
+site_url: https://aria2c.xyz
+site_description: Aria2c使用、Aria2c配置、BT下载、磁力链下载、网盘下载
+site_author: 下载狂魔
+repo_url: #
+copyright: Copyright &copy; 2019 <a href="https://aria2c.xyz">Aria2c</a> | Hosted by <a href="https://my.hostus.us/aff.php?aff=408" title="HostUS">HostUS Hosting</a>.
+#
+theme:  #readthedocs
+nav:
+    - 首页: index.md
+    - 教程: usage.md
+    - 关于: about.md
+
