--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: https://aria2c.xyz
 site_description: Aria2c使用、Aria2c配置、BT下载、磁力链下载、网盘下载
 site_author: 下载狂魔
 repo_url: #
-copyright: Copyright &copy; 2019 <a href="https://aria2c.xyz">Aria2c</a> | Hosted by <a href="https://my.hostus.us/aff.php?aff=408" title="HostUS">HostUS Hosting</a>.
+copyright: Copyright &copy; 2019 <a href="https://aria2c.xyz">Aria2c</a> | <a href="https://billing.virmach.com/aff.php?aff=6188&url=virmach.com/special-offers">Cheapest Hosting</a>.
 #
 theme:  #readthedocs
 nav:
